--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,11 +1,9 @@
 <h1>One Account</h1>
 
-<p> <%= @account.name %><br>
-    <%= @account.tier %><br>
-    $<%= @account.acv %><br>
-    <%= @account.strategist.name %> - <%=@account.strategist.location %></p>
-    
+<p> <%= @account.name %><br><br>
+    <%= @account.tier %><br><br>
+    $<%= @account.acv %><br><br>
 <% if @account.user == current_user %>
-  <%= link_to "Edit Account", edit_account_path(@account) %>
+  <%= link_to "Edit Account", edit_account_path(@account) %><br><br>
   <%= link_to "Delete Account", account_path(@account), method: :delete  %>
 <% end %>
