--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -1,5 +1,7 @@
 <%= form_for(@account) do |f| %>
 
+    <%= f.hidden_field :user_id %>
+    
     <%= f.label :name %>
     <%= f.text_field :name %>
   
