--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,14 +1,12 @@
-<h4>Accounts</h4>
-<ul>
+<h2>Accounts</h2>
        <% @accounts.each do |account| %>
            <li><%= link_to account.name, account_path(account)%>  </li>
+           <%= strategist.name %> 
+           <%= account.tier %><br>
+
+           $<%= account.acv %><br><br>
            
        <% end %>
-   </ul>
 
 
    <%= link_to "Add an Account", new_account_path%>
-
-
-
-    <%= submit_tag "Search" %>
