--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,16 @@
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
-        <div class="ui blue inverted menu">        
-        <%= link_to "Home", root_path, class: "item" %>      
+        <div class="ui grey inverted menu">        
+        <%= link_to "Home", root_path, class: "item" %>   
         <% if logged_in? %>                  
-            <%= link_to "Sign Out", logout_path, class: "item", method: "get" %>
+          <%= link_to "Accounts", accounts_path, class: "item", method: "get" %>    
+          <%= link_to "Sign Out", logout_path, class: "item", method: "get" %>
+            
         <% else%>
-            <a class="item" href="<%= new_user_url %>"/>Sign Up</a>
-            <a class="item" href="<%= login_url %>"/>Sign In</a>
+            <a class="item" href="<%= signup_url %>"/>Sign Up</a>
+            <a class="item" href="<%= login_url %>"/>Log In</a>
+                        
         <% end %>
         </div>      
       </div>
