--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,10 +1,8 @@
 <h2>Accounts</h2>
 
-      <% counter = 0 %>
        <% @accounts.each do |account| %>
-        <div class='ui blue segment'>
-          <%= counter += 1 %>.
-           <%= link_to account.name, account_path(account)%>
+        <div class='ui grey segment'>
+           <h3><%= link_to account.name, account_path(account)%></h3><br>
           
            Tier: <%= account.tier %><br>
           Industry: <%= account.industry %><br>
@@ -13,5 +11,6 @@
            </div>
        <% end %>
 
-
+    <div class="ui button">    
    <%= link_to "Add an Account", new_account_path%>
+   </div>
