--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -18,17 +18,29 @@
   </div>
   <% end %>
 </div>
-<% counter = 0 %>
+
+
+<div class="ui grey segment">
+<h3>Deliverables Sorted By Due Date</h3>
+<ul>
+    <% sort_deliverables.each do |del| %>
+        <li><%= del.report_type %></li>
+                        
+    <% end %>
+</ul>
+</div><br>
+
 
 <div class ='ui grey segment'>
        <% @account.deliverables.each do |account|%>
-        
         <div class= 'ui button'>
-  <%= link_to "Edit Deliverable", edit_account_deliverable_path(@account), method: :get  %><br><br>
-  <h5><%= counter += 1 %>.</h5> 
-           <h5>Deliverable Type: <%= account.report_type.capitalize %></h5><br>
-            <h5>Description: <%= account.description %></h5><br>
-           <h5>Date Assigned: <%= account.date_assigned.strftime("%m/%d/%Y") %></h5><br>
-           <h5>Due Date: <%= account.due_date.strftime("%m/%d/%Y") %></h5><br>
-           </div>
+        <%= link_to "Edit Deliverable", edit_account_deliverable_path(@account), method: :get  %><br>
+        </div>
+  
+           <h5>Deliverable Type: <%= account.report_type.capitalize %></h5>
+            <h5>Description: <%= account.description %></h5>
+           <h5>Date Assigned: <%= account.date_assigned.strftime("%m/%d/%Y") %></h5>
+           <h5>Due Date: <%= account.due_date.strftime("%m/%d/%Y") %></h5>
+           
            <% end %>
+           </div>
