--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,11 @@
+<% if !@user.errors.full_messages.empty? %>
 
+  <ul>
+  <% @user.errors.full_messages.each do |error| %>
+    <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
 <h1>Sign up here</h1>
 
 <%= form_for(@user) do |f| %>
